brane-dsl/tests/snapshots/regression__..__tests__branescript__vars.bs.snap
---
source: brane-dsl/tests/regression.rs
expression: res
---
Program {
    block: Block {
        stmts: [
            LetAssign {
                name: Identifier {
                    value: "test",
                    range: TextRange {
                        start: TextPos {
                            line: 2,
                            col: 5,
                        },
                        end: TextPos {
                            line: 2,
                            col: 9,
                        },
                    },
                },
                value: Literal {
                    literal: Integer {
                        value: 1,
                        range: TextRange {
                            start: TextPos {
                                line: 2,
                                col: 13,
                            },
                            end: TextPos {
                                line: 2,
                                col: 14,
                            },
                        },
                    },
                },
                st_entry: None,
                attrs: [],
                range: TextRange {
                    start: TextPos {
                        line: 2,
                        col: 1,
                    },
                    end: TextPos {
                        line: 2,
                        col: 15,
                    },
                },
            },
            Assign {
                name: Identifier {
                    value: "test",
                    range: TextRange {
                        start: TextPos {
                            line: 3,
                            col: 1,
                        },
                        end: TextPos {
                            line: 3,
                            col: 5,
                        },
                    },
                },
                value: Literal {
                    literal: Integer {
                        value: 2,
                        range: TextRange {
                            start: TextPos {
                                line: 3,
                                col: 9,
                            },
                            end: TextPos {
                                line: 3,
                                col: 10,
                            },
                        },
                    },
                },
                st_entry: None,
                attrs: [],
                range: TextRange {
                    start: TextPos {
                        line: 3,
                        col: 1,
                    },
                    end: TextPos {
                        line: 3,
                        col: 11,
                    },
                },
            },
            Assign {
                name: Identifier {
                    value: "test",
                    range: TextRange {
                        start: TextPos {
                            line: 4,
                            col: 1,
                        },
                        end: TextPos {
                            line: 4,
                            col: 5,
                        },
                    },
                },
                value: Literal {
                    literal: Integer {
                        value: 3,
                        range: TextRange {
                            start: TextPos {
                                line: 4,
                                col: 9,
                            },
                            end: TextPos {
                                line: 4,
                                col: 10,
                            },
                        },
                    },
                },
                st_entry: None,
                attrs: [],
                range: TextRange {
                    start: TextPos {
                        line: 4,
                        col: 1,
                    },
                    end: TextPos {
                        line: 4,
                        col: 11,
                    },
                },
            },
            LetAssign {
                name: Identifier {
                    value: "abc__2",
                    range: TextRange {
                        start: TextPos {
                            line: 7,
                            col: 5,
                        },
                        end: TextPos {
                            line: 7,
                            col: 11,
                        },
                    },
                },
                value: Literal {
                    literal: String {
                        value: "Hello there!",
                        range: TextRange {
                            start: TextPos {
                                line: 7,
                                col: 15,
                            },
                            end: TextPos {
                                line: 7,
                                col: 29,
                            },
                        },
                    },
                },
                st_entry: None,
                attrs: [],
                range: TextRange {
                    start: TextPos {
                        line: 7,
                        col: 1,
                    },
                    end: TextPos {
                        line: 7,
                        col: 30,
                    },
                },
            },
            Assign {
                name: Identifier {
                    value: "abc__2",
                    range: TextRange {
                        start: TextPos {
                            line: 8,
                            col: 1,
                        },
                        end: TextPos {
                            line: 8,
                            col: 7,
                        },
                    },
                },
                value: Literal {
                    literal: Boolean {
                        value: true,
                        range: TextRange {
                            start: TextPos {
                                line: 8,
                                col: 11,
                            },
                            end: TextPos {
                                line: 8,
                                col: 15,
                            },
                        },
                    },
                },
                st_entry: None,
                attrs: [],
                range: TextRange {
                    start: TextPos {
                        line: 8,
                        col: 1,
                    },
                    end: TextPos {
                        line: 8,
                        col: 16,
                    },
                },
            },
            LetAssign {
                name: Identifier {
                    value: "new_test",
                    range: TextRange {
                        start: TextPos {
                            line: 11,
                            col: 5,
                        },
                        end: TextPos {
                            line: 11,
                            col: 13,
                        },
                    },
                },
                value: Literal {
                    literal: String {
                        value: "Keyword bug: fixed",
                        range: TextRange {
                            start: TextPos {
                                line: 11,
                                col: 17,
                            },
                            end: TextPos {
                                line: 11,
                                col: 37,
                            },
                        },
                    },
                },
                st_entry: None,
                attrs: [],
                range: TextRange {
                    start: TextPos {
                        line: 11,
                        col: 1,
                    },
                    end: TextPos {
                        line: 11,
                        col: 38,
                    },
                },
            },
        ],
        table: RefCell {
            value: SymbolTable {
                parent: None,
                functions: {},
                classes: {},
                variables: {},
            },
        },
        ret_type: None,
        attrs: [],
        range: TextRange {
            start: TextPos {
                line: 2,
                col: 1,
            },
            end: TextPos {
                line: 11,
                col: 38,
            },
        },
    },
    metadata: {},
}
